@@ -12,6 +12,7 @@ dpkg (1.16.15+nmu1) UNRELEASED; urgency=low
   * Fix file triggers/Unincorp descriptor leak on subprocesses. Regression
     introduced with the initial triggers implementation in dpkg 1.14.17.
     Closes: #751021
+  * Fix a descriptor leak on dselect subprocesses when --debug is used.
 
   [ Updated scripts translations ]
   * Fix typos in German (Helge Kreutzmann)
